--- a/index.html
+++ b/index.html
@@ -9,10 +9,12 @@
       }
       img{
         max-width: 100%;
+        margin: 0;
       }
     </style>
   </head>
   <body>
     <img src="img/header.jpg" alt="">
+    <img src="img/hero.jpg" alt="">
   </body>
 </html>
