--- a/index.html
+++ b/index.html
@@ -10,11 +10,14 @@
       img{
         max-width: 100%;
         margin: 0;
+        vertical-align: top;
       }
     </style>
   </head>
   <body>
     <img src="img/header.jpg" alt="">
     <img src="img/hero.jpg" alt="">
+    <img src="img/acustica.webp" alt="">
+    <img src="img/footer.jpg" alt="">
   </body>
 </html>
