--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <img src="img/header.jpg" alt="">
     <img src="img/hero.jpg" alt="">
     <img src="img/acustica.webp" alt="">
+    <img src="img/clasica.jpg" alt="">
     <img src="img/footer.jpg" alt="">
   </body>
 </html>
