--- a/index.html
+++ b/index.html
@@ -16,10 +16,7 @@
     </style>
   </head>
   <body>
-    <img src="img/header.jpg" alt="">
-    <img src="img/hero.jpg" alt="">
-    <img src="img/acustica.webp" alt="">
-    <img src="img/clasica.jpg" alt="">
-    <img src="img/footer.jpg" alt="">
+
+    <img src="img/nueva-version.jpg" alt="">
   </body>
 </html>
