--- a/index.html
+++ b/index.html
@@ -13,9 +13,18 @@
         margin: 0;
         vertical-align: top;
       }
+      img#responsive{
+        display: none;
+      }
+      @media screen and (max-width: 768px) {
+        img#responsive{
+          display: block;
+        }
+      }
     </style>
   </head>
   <body>
+    <img src="img/invie-responsive.png" alt="" id="responsive">
     <img src="img/header.jpg" alt="">
     <img src="img/hero.jpg" alt="">
     <img src="img/acustica.webp" alt="">
